gccida/g2/store_parm_decls
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_parm_decls/src/c-decl.c:6931:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v2; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_parm_decls/src/c-decl.c:6944:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // r14 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_parm_decls/src/c-decl.c:6947:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v18; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_parm_decls/src/c-decl.c:6948:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v19; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_parm_decls/src/c-decl.c:6952:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_parm_decls/src/c-decl.c:6954:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // r15 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_parm_decls/src/c-decl.c:6957:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_parm_decls/src/c-decl.c:6958:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v29; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_parm_decls/src/c-decl.c:6959:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *values; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_parm_decls/src/c-decl.c:6964:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v35; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_parm_decls/src/c-decl.c:6966:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *section_name; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_parm_decls/src/c-decl.c:6967:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v38; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_parm_decls/src/c-decl.c:6968:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v39; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_parm_decls/src/c-decl.c:6969:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *pending_sizes; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_parm_decls/src/c-decl.c:6976:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v47; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_parm_decls/src/c-decl.c:7133:20: error: expected expression
v23 = ( tree_node *)p_chain[4]; 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_parm_decls/src/c-decl.c:7133:9: error: use of undeclared identifier 'tree_node'
v23 = ( tree_node *)p_chain[4]; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_parm_decls/src/c-decl.c:7157:20: error: expected expression
v47 = ( tree_node *)*( &global_trees + 25); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_parm_decls/src/c-decl.c:7157:9: error: use of undeclared identifier 'tree_node'
v47 = ( tree_node *)*( &global_trees + 25); 
        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_parm_decls/src/obj/c-decl.o] Error 1
